--- a/src/Main.css
+++ b/src/Main.css
@@ -19,13 +19,16 @@ button{
 .container{
   display: flex;
   flex-direction: column;
-  padding: 60px;
+  padding: 30px;
   margin: 50px auto;
-  width: 550px;
+  width: clamp(120px, 80vw, 540px);
   color: #ccc;
   background-color: rgba(5, 5, 133, 0.3);
   border-radius: 20px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  @media (min-width: 680px) {
+    width: clamp(120px, 50vw, 540px);
+  }
 
 }
 .container h1{
@@ -33,4 +36,3 @@ button{
   font-size: 40px;
   color: #ccc;
 }
-
